# vsc-c-em-wabt-meson

./: README.md  hello.c  hello.wat  wasm.ini
.devcontainer/: Dockerfile  devcontainer.json  version_info.sh
build_c/: meson.build  meson_options.txt  native_clang.ini  native_template.ini
build_to_wasm/: cross_emscripten.ini  meson.build
templates/: cross_template.ini
